# container-images

./: .gitignore  .gitleaks.toml  .hadolint.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-bake.hcl  pixi.toml  pyproject.toml  zensical.toml
.changes/unreleased/: Added-20260526-124638.yaml  Added-20260526-124648.yaml  Added-20260526-124716.yaml  Added-20260526-180001.yaml  Added-20260526-180306.yaml  Added-20260526-190000.yaml  Added-20260526-200100.yaml  Added-20260526-200200.yaml  Added-20260526-200300.yaml  Added-20260527-090000.yaml  Added-20260527-100000.yaml  Added-20260527-120000.yaml  Added-20260528-110000.yaml  Added-20260604-144600.yaml  Added-20260606-165410.yaml  Added-20260607-100658.yaml  Added-20260609-jamovi-ubi9-stack.yaml  Added-20260609-writerside-builder-trivy.yaml  Added-20260610-jamovi-ubi9-repin.yaml  Added-20260612-bake-datascience-attestation.yaml  Added-20260614-120426.yaml  Added-20260614-121257.yaml  Added-20260614-134517.yaml  Added-20260617-changelog-check-ci.yaml  Added-20260617-release-pipeline.yaml  Changed-20260603-bun-ubi9-1.3.14.yaml  Fixed-20260526-133128.yaml  Fixed-20260526-140000.yaml  Fixed-20260526-180000.yaml  Fixed-20260526-200000.yaml  Fixed-20260527-202700.yaml  Fixed-20260527-210000.yaml  Fixed-20260528-100000.yaml  Fixed-20260603-120000.yaml  Fixed-20260606-112408.yaml  Fixed-20260607-070216.yaml  Fixed-20260610-jamovi-ubi9-repin.yaml  Fixed-20260611-jamovi-ubi9-repin-applied.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: cve-report.md  new-image-request.md
.github/workflows/: base-drift.yml  build.yml  changelog-check.yml  codeql.yml  ghcr-cleanup.yml  hadolint.yml  lint.yml  policy.yml  release.yml  triage.yml  trivy-scheduled-rescan.yml  trivy.yml  validate-base-pins.yml
docs/superpowers/plans/: 2026-06-03-cicd-janitor-removal.md  2026-06-04-starrocks-ubi9-images.md  2026-06-06-datascience-notebook-ubi9-phase1.md  2026-06-07-datascience-notebook-ubi9-phase2.md  2026-06-07-scipy-notebook-repin-base-digest.md  2026-06-14-proxy-ca-management.md
docs/superpowers/specs/: 2026-06-01-cicd-janitor-removal-design.md  2026-06-03-bun-ubi9-1.3.14-bump-design.md  2026-06-04-starrocks-ubi9-images-design.md  2026-06-06-datascience-notebook-ubi9-design.md  2026-06-07-datascience-notebook-ubi9-phase2-design.md  2026-06-07-scipy-notebook-repin-base-digest-design.md  2026-06-09-jamovi-ubi9-stack-design.md
images/base-notebook-ubi9/: Containerfile  README.md  image.yaml  pixi.toml
images/bun-ubi9/: Containerfile  README.md  image.yaml
images/dbt-ubi9/: Containerfile  README.md  image.yaml
images/docker-stacks-foundation-ubi9/: Containerfile  README.md  image.yaml  pixi.toml
images/go-ubi9/: Containerfile  README.md  image.yaml
images/jamovi-deps-ubi9/: Containerfile  README.md  image.yaml  smoke-cmd
images/jamovi-ubi9/: Containerfile  README.md  image.yaml  smoke-cmd  smoke.sh
images/minimal-notebook-ubi9/: Containerfile  README.md  image.yaml  pixi.toml
images/nginx-ubi9/: Containerfile  README.md  default.conf  image.yaml  nginx.conf
images/proxy-ca-probe-ubi9/: Containerfile  README.md  image.yaml  proxy-ca-probe.py  smoke-cmd
images/proxy-ca-probe-ubi9/helpers/: TlsProbe.java  node-tls-probe.js
images/pyspark-ubi9/: Containerfile  README.md  entrypoint.sh  image.yaml  smoke-cmd
images/python-ubi9/: Containerfile  README.md  image.yaml
images/r-base-ubi9/: Containerfile  README.md  image.yaml
images/scipy-notebook-ubi9/: Containerfile  README.md  image.yaml  pixi.toml  smoke-cmd
images/spark-operator-ubi9/: Containerfile  README.md  entrypoint.sh  image.yaml
images/spark-ubi9/: Containerfile  README.md  image.yaml  smoke-cmd
images/starrocks-allin1-ubi9/: Containerfile  README.md  image.yaml  smoke.sh
images/starrocks-be-ubi9/: Containerfile  README.md  image.yaml  smoke.sh
images/starrocks-cn-ubi9/: Containerfile  README.md  image.yaml  smoke.sh
images/starrocks-fe-ubi9/: Containerfile  README.md  image.yaml  smoke-cmd  smoke.sh
images/zulu17-jdk-ubi9/: Containerfile  README.md  image.yaml
images/zulu17-jre-headless-ubi9/: Containerfile  README.md  image.yaml
images/zulu21-jdk-ubi9/: Containerfile  README.md  image.yaml
images/zulu21-jre-headless-ubi9/: Containerfile  README.md  image.yaml
policy/: base_image.rego  base_image_test.rego  helpers.rego  labels.rego  user.rego
policy/image-meta/: tags.rego
scripts/: check-changie-fragment.sh  ghcr-cleanup.sh  ghcr-purge.sh  repin-chained-base.sh  smoke-test.sh  trivy-scan.sh  verify-image.sh
tests/: test-base-images-pinned.sh  test-build-workflow-tags.sh  test-chained-bases-pinned.sh  test-chained-bases-reachable.sh  test-ghcr-cleanup.sh  test-proxy-ca-probe-report.sh  test-repin-chained-base.sh
tests/proxy-ca/: docker-compose.yaml  run-docker.sh
tests/proxy-ca/lib/: mitm.sh
