[project]
name = "container-images"
version = "0.0.1"
description = "RDL container image catalog — build tooling"
requires-python = ">=3.10"
dependencies = [
    "hadolint-py",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.10"
shellcheck = "*"
actionlint = "*"
conftest = "*"
trivy = "*"
pre-commit = "*"
zensical = ">=0.0.43,<0.0.44"

[tool.pixi.tasks]
lint-containerfiles = "find images -name Containerfile -print0 | xargs -0 hadolint --config .hadolint.yaml"
lint-shell = "find scripts tests -name '*.sh' -print0 | xargs -0 shellcheck"
lint-actions = "actionlint"
lint-secrets = "pre-commit run gitleaks --all-files"
policy-check-containerfiles = "find images -name Containerfile -print0 | xargs -0 conftest test --policy policy/ --parser dockerfile"
policy-check-image-meta = "find images -name image.yaml -print0 | xargs -0 conftest test --policy policy/image-meta/ --namespace image_meta"
policy-check-workflow-tags = "bash tests/test-build-workflow-tags.sh"
policy-check-base-pinning = "bash tests/test-base-images-pinned.sh"
pre-commit-install = "pre-commit install --hook-type pre-commit --hook-type pre-push"
pre-commit-run = "pre-commit run --all-files"
trivy-scan = "scripts/trivy-scan.sh"
smoke-test = "scripts/smoke-test.sh"

[tool.pixi.tasks.policy-check]
depends-on = ["policy-check-containerfiles", "policy-check-image-meta", "policy-check-workflow-tags", "policy-check-base-pinning"]

[tool.pixi.tasks.lint-all]
depends-on = ["lint-containerfiles", "lint-shell", "lint-actions", "policy-check"]
