[project]
name = "container-images"
version = "0.0.1"
description = "RDL container image catalog — build tooling"
requires-python = ">=3.10"
dependencies = [
    "hadolint-py",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.10"
shellcheck = "*"
actionlint = "*"
conftest = "*"
trivy = "*"
pre-commit = "*"
zensical = ">=0.0.43,<0.0.44"
crane = "*"
jq = "*"

[tool.pixi.tasks]
lint-containerfiles = "find images -name Containerfile -print0 | xargs -0 hadolint --config .hadolint.yaml"
lint-shell = "find scripts tests -name '*.sh' -print0 | xargs -0 shellcheck"
lint-actions = "actionlint"
lint-secrets = "pre-commit run gitleaks --all-files"
policy-check-containerfiles = "find images -name Containerfile -print0 | xargs -0 conftest test --policy policy/ --parser dockerfile"
policy-check-image-meta = "find images -name image.yaml -print0 | xargs -0 conftest test --policy policy/image-meta/ --namespace image_meta"
policy-check-workflow-tags = "bash tests/test-build-workflow-tags.sh"
policy-check-base-pinning = "bash tests/test-base-images-pinned.sh"
policy-check-chained-bases = "bash tests/test-chained-bases-pinned.sh"
# Network-dependent (queries GHCR via crane). Intentionally NOT part of the offline
# `policy-check` aggregate below; run it explicitly with
# `pixi run policy-check-chained-bases-reachable`. CI runs it in validate-base-pins.yml.
policy-check-chained-bases-reachable = "bash tests/test-chained-bases-reachable.sh"
repin-chained-bases = "scripts/repin-chained-base.sh"
test-repin-chained-base = "bash tests/test-repin-chained-base.sh"
test-proxy-ca-probe-report = "bash tests/test-proxy-ca-probe-report.sh"
pre-commit-install = "pre-commit install --hook-type pre-commit --hook-type pre-push"
pre-commit-run = "pre-commit run --all-files"
trivy-scan = "scripts/trivy-scan.sh"
smoke-test = "scripts/smoke-test.sh"

# Offline aggregate (no network). The network-dependent reachability guard is deliberately
# excluded; see policy-check-chained-bases-reachable above.
# test-repin-chained-base is offline/hermetic (stub crane, temp sandbox) and belongs here.
[tool.pixi.tasks.policy-check]
depends-on = ["policy-check-containerfiles", "policy-check-image-meta", "policy-check-workflow-tags", "policy-check-base-pinning", "policy-check-chained-bases", "test-repin-chained-base", "test-proxy-ca-probe-report"]

[tool.pixi.tasks.lint-all]
depends-on = ["lint-containerfiles", "lint-shell", "lint-actions", "policy-check"]
